--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
             <div class="estatistica">
                 <p class="estatistica-titulo">Força</p>
                 <div class="estatistica-valor">
-                    <p class="estatistica-numero" data-estatistica="forca">768</p>
+                    <p class="estatistica-numero" data-estatistica="forca">0</p>
                 </div>
             </div>
             <div class="estatistica">
                 <p class="estatistica-titulo">Poder</p>
                 <div class="estatistica-valor">
-                    <p class="estatistica-numero" data-estatistica="poder">630</p>
+                    <p class="estatistica-numero" data-estatistica="poder">0</p>
                 </div>
             </div>
             <div class="estatistica">
                 <p class="estatistica-titulo">Energia</p>
                 <div class="estatistica-valor">
-                    <p class="estatistica-numero" data-estatistica="energia">289</p>
+                    <p class="estatistica-numero" data-estatistica="energia">0</p>
                 </div>
             </div>
             <div class="estatistica">
                 <p class="estatistica-titulo">Velocidade</p>
                 <div class="estatistica-valor">
-                    <p class="estatistica-numero" data-estatistica="velocidade">597</p>
+                    <p class="estatistica-numero" data-estatistica="velocidade">0</p>
                 </div>
             </div>
         </section>
@@ -56,7 +56,7 @@
                         <div class="controle">
                             <buttom class="controle-ajuste" data-controle="-" data-pecas="bracos">-</buttom>
                             <input type="text" class="controle-contador" value="00" data-contador>
-                            <buttom class="controle-ajuste" data-controle="+" data-pecas="bracos">+</buttom>
+                            <buttom class="controle-ajuste" data-controle="+" data-peca="bracos">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
@@ -65,7 +65,7 @@
                         <div class="controle">
                             <buttom class="controle-ajuste" data-controle="-" data-pecas="blindagem">-</buttom>
                             <input type="text" class="controle-contador" value="00" data-contador>
-                            <buttom class="controle-ajuste" data-controle="+" data-pecas="blindagem">+</buttom>
+                            <buttom class="controle-ajuste" data-controle="+" data-peca="blindagem">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
@@ -74,7 +74,7 @@
                         <div class="controle">
                             <buttom class="controle-ajuste" data-controle="-" data-pecas="nucleos">-</buttom>
                             <input type="text" class="controle-contador" value="00" data-contador>
-                            <buttom class="controle-ajuste" data-controle="+" data-pecas="nucleos">+</buttom>
+                            <buttom class="controle-ajuste" data-controle="+" data-peca="nucleos">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
@@ -83,7 +83,7 @@
                         <div class="controle">
                             <buttom class="controle-ajuste" data-controle="-" data-pecas="pernas">-</buttom>
                             <input type="text" class="controle-contador" value="00" data-contador>
-                            <buttom class="controle-ajuste" data-controle="+" data-pecas="pernas">+</buttom>
+                            <buttom class="controle-ajuste" data-controle="+" data-peca="pernas">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
@@ -92,7 +92,7 @@
                         <div class="controle">
                             <buttom class="controle-ajuste" data-controle="-" data-pecas="foguetes">-</buttom>
                             <input type="text" class="controle-contador" value="00" data-contador>
-                            <buttom class="controle-ajuste" data-controle="+" data-pecas="foguetes">+</buttom>
+                            <buttom class="controle-ajuste" data-controle="+" data-peca="foguetes">+</buttom>
                         </div>
                     </div>
                 </div>
